--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -15,11 +14,13 @@
 </head>
 <body>
 
+  <!-- Verificação de login -->
   <script type="module">
     import { checkAuth } from './auth.js';
     checkAuth();
   </script>
 
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Aniversariantes</a>
@@ -36,6 +37,7 @@
     </div>
   </nav>
 
+  <!-- Conteúdo -->
   <div class="container mt-5 pt-4">
     <h3 class="mb-3">Selecione o mês:</h3>
     <div class="d-flex align-items-center gap-3 mb-4">
@@ -60,10 +62,12 @@
     <div id="lista-aniversariantes"></div>
   </div>
 
+  <!-- Scripts necessários -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Script principal embutido -->
   <script type="module">
     import { db } from './firebase-config.js';
     import { ref, onValue } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
@@ -104,13 +108,7 @@
           const item = document.createElement("div");
           item.className = "membro-item";
           item.innerHTML = `
-            <div style="display: flex; align-items: center;">
-              <img src="${m.fotoURL}" style="width: 60px; height: 60px; object-fit: cover; border-radius: 50%; margin-right: 15px;" />
-              <div>
-                <strong style="font-size: 1.2rem;">${m.nome}</strong><br>
-                <small>Nascimento: ${m.dia} de ${m.mesNome}</small>
-              </div>
-            </div>`;
+            <div><strong style="font-size: 1.2rem;">${m.nome}</strong><br><small>Nascimento: ${m.dia} de ${m.mesNome}</small></div>`;
           listaDiv.appendChild(item);
         });
 
@@ -131,18 +129,12 @@
       const mesNome = mesesNomes[mesSelecionado];
       const dataAtual = new Date().toLocaleDateString();
 
-      const logo = new Image();
-      logo.crossOrigin = "anonymous";
-      logo.src = "./logo.png";
-      await new Promise(resolve => logo.onload = resolve);
-      doc.addImage(logo, "PNG", 80, 10, 50, 25);
-
       doc.setFontSize(14);
-      doc.text(igrejaNome, 105, 40, null, null, "center");
+      doc.text(igrejaNome, 105, 20, null, null, "center");
       doc.setFontSize(11);
-      doc.text(textoIntro, 105, 48, null, null, "center");
+      doc.text(textoIntro, 105, 28, null, null, "center");
       doc.setFontSize(13);
-      doc.text(`Aniversariantes de ${mesNome}`, 105, 60, null, null, "center");
+      doc.text(`Aniversariantes de ${mesNome}`, 105, 38, null, null, "center");
 
       const snapshot = await new Promise(resolve =>
         onValue(ref(db, "membros"), resolve, { onlyOnce: true })
@@ -163,7 +155,7 @@
       }
 
       aniversariantes.sort((a, b) => a.dia - b.dia);
-      let y = 70;
+      let y = 50;
 
       for (const m of aniversariantes) {
         if (m.fotoURL) {
