--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -121,70 +121,96 @@
     });
 
     exportarBtn.addEventListener("click", async () => {
-      const mesSelecionado = parseInt(mesSelect.value);
-      if (!mesSelecionado) return alert("Selecione um mês para exportar.");
+  const mesSelecionado = parseInt(mesSelect.value);
+  if (!mesSelecionado) return alert("Selecione um mês para exportar.");
 
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-      const igrejaNome = "Igreja Exemplo da Fé";
-      const textoIntro = "Segue abaixo a lista de aniversariantes do mês.";
-      const mesNome = mesesNomes[mesSelecionado];
-      const dataAtual = new Date().toLocaleDateString();
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF({
+    orientation: "portrait",
+    unit: "mm",
+    format: "a4",
+    compress: true // Ativa compressão no PDF
+  });
 
-      const logo = new Image();
-      logo.crossOrigin = "anonymous";
-      logo.src = "./logo.png";
-      await new Promise(resolve => logo.onload = resolve);
-      doc.addImage(logo, "PNG", 80, 10, 50, 25);
+  const igrejaNome = "Igreja Exemplo da Fé";
+  const textoIntro = "Segue abaixo a lista de aniversariantes do mês.";
+  const mesNome = mesesNomes[mesSelecionado];
+  const dataAtual = new Date().toLocaleDateString();
 
-      doc.setFontSize(14);
-      doc.text(igrejaNome, 105, 40, null, null, "center");
-      doc.setFontSize(11);
-      doc.text(textoIntro, 105, 48, null, null, "center");
-      doc.setFontSize(13);
-      doc.text(`Aniversariantes de ${mesNome}`, 105, 60, null, null, "center");
-
-      const snapshot = await new Promise(resolve =>
-        onValue(ref(db, "membros"), resolve, { onlyOnce: true })
-      );
-      const data = snapshot.val();
-      const aniversariantes = [];
-      for (const id in data) {
-        const membro = data[id];
-        if (!membro.nascimento) continue;
-        const nascimento = new Date(membro.nascimento);
-        if ((nascimento.getMonth() + 1) === mesSelecionado) {
-          aniversariantes.push({
-            nome: membro.nome,
-            dia: nascimento.getDate(),
-            fotoURL: membro.fotoURL || ""
-          });
-        }
-      }
-
-      aniversariantes.sort((a, b) => a.dia - b.dia);
-      let y = 70;
-
-      for (const m of aniversariantes) {
-        if (m.fotoURL) {
-          const img = await carregarImagem(m.fotoURL);
-          doc.setDrawColor(255, 255, 255);
-          doc.setFillColor(255, 255, 255);
-          doc.circle(22.5, y - 2.5, 8, 'F');
-          doc.addImage(img, "JPEG", 15, y - 10, 15, 15);
-        }
-        doc.text(`${m.nome} - ${m.dia}/${mesSelecionado}`, 35, y);
-        y += 20;
-        if (y > 270) {
-          doc.addPage();
-          y = 20;
-        }
-      }
-
-      doc.setFontSize(10);
-      doc.text(`Impresso em: ${dataAtual}`, 15, 290);
-      doc.save(`Aniversariantes-${mesNome}.pdf`);
+  // Otimização: Verifica se a logo existe antes de tentar carregar
+  try {
+    const logo = new Image();
+    logo.crossOrigin = "anonymous";
+    logo.src = "./logo.png";
+    await new Promise((resolve, reject) => {
+      logo.onload = resolve;
+      logo.onerror = reject;
     });
+    doc.addImage(logo, "PNG", 80, 10, 50, 25);
+  } catch (e) {
+    console.warn("Logo não carregada, continuando sem ela...");
+  }
+
+  doc.setFontSize(12); // Reduzindo um pouco o tamanho da fonte
+  doc.text(igrejaNome, 105, 40, null, null, "center");
+  doc.setFontSize(10);
+  doc.text(textoIntro, 105, 48, null, null, "center");
+  doc.setFontSize(12);
+  doc.text(`Aniversariantes de ${mesNome}`, 105, 60, null, null, "center");
+
+  const snapshot = await new Promise(resolve =>
+    onValue(ref(db, "membros"), resolve, { onlyOnce: true })
+  );
+  const data = snapshot.val();
+  const aniversariantes = [];
+  
+  // Filtra membros sem nascimento primeiro para reduzir processamento
+  for (const id in data) {
+    const membro = data[id];
+    if (membro.nascimento) {
+      const nascimento = new Date(membro.nascimento);
+      if ((nascimento.getMonth() + 1) === mesSelecionado) {
+        aniversariantes.push({
+          nome: membro.nome,
+          dia: nascimento.getDate(),
+          fotoURL: membro.fotoURL || ""
+        });
+      }
+    }
+  }
+
+  aniversariantes.sort((a, b) => a.dia - b.dia);
+  let y = 70;
+
+  // Opção para desativar fotos se houver muitas
+  const incluirFotos = aniversariantes.length < 50; // Só inclui fotos se menos de 50 aniversariantes
+  
+  for (const m of aniversariantes) {
+    if (incluirFotos && m.fotoURL) {
+      try {
+        const imgData = await carregarImagem(m.fotoURL);
+        if (imgData) {
+          doc.addImage(imgData, "JPEG", 15, y - 10, 15, 15);
+        }
+      } catch (e) {
+        console.error(`Erro ao carregar foto de ${m.nome}`, e);
+      }
+    }
+    
+    doc.text(`${m.dia.toString().padStart(2, '0')}/${mesSelecionado.toString().padStart(2, '0')} - ${m.nome}`, 
+             incluirFotos ? 35 : 20, y);
+    
+    y += 10; // Reduzindo espaçamento entre linhas de 20 para 10
+    if (y > 270) {
+      doc.addPage();
+      y = 20;
+    }
+  }
+
+  doc.setFontSize(8); // Fonte menor para dados de impressão
+  doc.text(`Impresso em: ${dataAtual}`, 15, 290);
+  doc.save(`Aniversariantes-${mesNome}.pdf`);
+});
 
     async function carregarImagem(url) {
   try {
