--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -194,6 +194,8 @@
       }
 
       // Títulos
+      let currentY = 35; // Era 40, agora 35 (5mm mais para cima)
+      
       doc.setFont("helvetica", "bold");
       doc.setFontSize(styles.titleFontSize);
       doc.text("Igreja Exemplo da Fé", 105, 45, { align: "center" });
