--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -211,9 +211,9 @@
       // Nome do mês em y=69 (12mm após o subtítulo)
 
       // Linha divisória
-      doc.setDrawColor(200, 200, 200); // Cor cinza claro (RGB)
-      doc.setLineWidth(0.5); // Espessura fina (0.5mm)
-      doc.line(styles.margin, 5, 210 - styles.margin, 100);
+      doc.setDrawColor(200, 200, 200);
+      doc.setLineWidth(0.5);
+      doc.line(styles.margin, 58, 210 - styles.margin, 58);
      
 
       // Carrega dados
