--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -331,7 +331,7 @@ doc.line(styles.margin, 58, 210 - styles.margin, 58); // Desenha linha horizonta
     
     doc.setFontSize(9);
     doc.setTextColor(150, 150, 150);
-    doc.text(`Gerado em ${dataHoraFormatada} • Famílias Vivendo na Graça e Unção do Espírito`, 105, 287, {
+    doc.text(`Gerado em ${dataHoraFormatada} • Igreja Critã Nova Esperança`, 105, 287, {
       align: "center"
     });
       // Exemplo: "Gerado em 05/03/2024 às 14:30 • Igreja Exemplo da Fé"
