--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -319,19 +319,21 @@ doc.line(styles.margin, 58, 210 - styles.margin, 58); // Desenha linha horizonta
         yPosition += styles.lineHeight;
       }
 
-     // Rodapé com data e hora no formato solicitado
-    const dataAtual = new Date().toLocaleDateString('pt-BR'); // Formato dd/mm/aaaa
-    const horaAtual = new Date().toLocaleTimeString('pt-BR', { 
-      hour: '2-digit', 
-      minute: '2-digit',
-      hour12: false // Formato 24h
-    });
-    
-    doc.setFontSize(9);
-    doc.setTextColor(150, 150, 150); // Cinza médio
-    doc.text(`Gerado em ${dataAtual} às ${horaAtual} • Igreja Exemplo da Fé`, 105, 287, { 
-      align: "center" 
-    });
+     // Rodapé corrigido e melhorado
+const dataHoraFormatada = new Date().toLocaleString('pt-BR', {
+  day: '2-digit',
+  month: '2-digit',
+  year: 'numeric',
+  hour: '2-digit',
+  minute: '2-digit',
+  hour12: false
+}).replace(',', ' às'); // Transforma "dd/mm/aaaa, hh:mm" em "dd/mm/aaaa às hh:mm"
+
+doc.setFontSize(9);
+doc.setTextColor(150, 150, 150);
+doc.text(`Gerado em ${dataHoraFormatada} • Famílias Vivendo na Graça e Unção do Espírito`, 105, 287, {
+  align: "center"
+});
       // Exemplo: "Gerado em 05/03/2024 às 14:30 • Igreja Exemplo da Fé"
 
 
