--- a/listagem.html
+++ b/listagem.html
@@ -231,8 +231,9 @@ btnExportar.addEventListener("click", async () => {  // Adiciona evento de cliqu
     subtitleFontSize: 12,  // Tamanho da fonte do subtítulo
     textFontSize: 10,  // Tamanho da fonte do conteúdo
     margin: 15,  // Margem das páginas
-    lineHeight: 3  // Altura da linha entre textos
-  };
+     lineHeight: 10, // Altere este valor (em mm) para aumentar/diminuir o espaço entre linhas
+      };
+
 
       
   // Cabeçalho
