--- a/listagem.html
+++ b/listagem.html
@@ -347,7 +347,7 @@ btnExportar.addEventListener("click", async () => {
             || 'Não informado'
           }`,
           `Nascimento: ${membro.nascimento ? new Date(membro.nascimento).toLocaleDateString('pt-BR') : 'Não informado'}`,
-          `Batismo: ${membro.dataBatismo ? new Date(membro.dataBatismo).toLocaleDateString('pt-BR') : 'Não informado'}`,
+          `Batismo: ${membro.batismo ? new Date(membro.batismo).toLocaleDateString('pt-BR') : 'Não informado'}`,
           `Função: ${membro.funcao || 'Não informado'}`,
           `Telefone: ${membro.telefone || 'Não informado'}`,
           `Sexo: ${membro.sexo === 'M' ? 'Masculino' : membro.sexo === 'F' ? 'Feminino' : 'Não informado'}`
