--- a/listagem.html
+++ b/listagem.html
@@ -338,21 +338,16 @@
       const col1 = styles.margin;
       const colWidth = (210 - (2 * styles.margin)) / 2;
 
-    let totalPages = 1;
-
-// Adiciona membros com a nova verificação de quebra de página
+   // Adiciona membros com controle real de quebra de página
 doc.setFont("helvetica", "normal");
 doc.setFontSize(styles.textFontSize);
 
+let totalPages = 1; // Começa com 1 página
+const pageHeight = doc.internal.pageSize.getHeight();
+const footerHeight = 15; // Espaço reservado para o rodapé
+
 membros.forEach((membro, index) => {
-    // Nova verificação de quebra de página com margem para o rodapé
-    if (yPosition > doc.internal.pageSize.getHeight() - 30) { // 30mm de margem inferior
-        doc.addPage();
-        yPosition = 20; // Reinicia posição Y
-        totalPages++; // Incrementa o contador de páginas
-    }
-    
-    // Restante do código para adicionar membros (mantenha igual)
+    // Calcula a altura aproximada que este membro ocupará
     const dados = [
         `Nome: ${membro.nome || 'Não informado'}`,
         `Nascimento: ${membro.nascimento ? new Date(membro.nascimento).toLocaleDateString('pt-BR') : 'Não informado'}`,
@@ -373,6 +368,23 @@ membros.forEach((membro, index) => {
         }`
     ];
 
+    // Calcula a altura total que este membro ocupará
+    let memberHeight = 0;
+    dados.forEach((texto, i) => {
+        const textLines = doc.splitTextToSize(texto, colWidth - 5);
+        memberHeight += textLines.length * styles.lineHeight;
+        if (i % 2 === 1) memberHeight += styles.lineHeight; // Espaço entre linhas
+    });
+    memberHeight += 12; // Adiciona margem para a linha divisória
+
+    // Verifica se precisa de nova página ANTES de adicionar o conteúdo
+    if (yPosition + memberHeight > pageHeight - footerHeight) {
+        doc.addPage();
+        yPosition = 20; // Posição inicial na nova página
+        totalPages++;
+    }
+
+    // Agora adiciona o conteúdo do membro
     let x = col1;
     let maxHeight = 0;
     
@@ -389,6 +401,7 @@ membros.forEach((membro, index) => {
         }
     });
 
+    // Linha divisória
     doc.setDrawColor(220, 220, 220);
     doc.setLineWidth(0.8);
     yPosition += 7;
@@ -397,8 +410,8 @@ membros.forEach((membro, index) => {
     yPosition += 5;
 });
 
-      // Adicionar rodapé em todas as páginas
-      addFooter(doc, totalPages);
+// Adiciona o rodapé após todo o conteúdo
+addFooter(doc, totalPages);
 
       // Salva o PDF
       doc.save(`Lista_de_Membros_${new Date().getFullYear()}.pdf`);
