--- a/listagem.html
+++ b/listagem.html
@@ -317,8 +317,7 @@
           label: "Endereço", 
           field: ["endereco", "bairro", "cidade", "estado"], 
           format: (vals) => vals.filter(Boolean).join(', ') || 'Não informado',
-          fontSize: 11,
-          marginBottom: 8 // Adicione esta propriedade para espaçamento extra
+          fontSize: 11
         }
       ];
 
@@ -380,9 +379,9 @@
         // Linha divisória com mais espaço
         doc.setDrawColor(230, 230, 230);
         doc.setLineWidth(0.3);
-        yPosition += 8; // Espaço antes da linha aumentado
+        yPosition += 10; // Espaço antes da linha aumentado
         doc.line(styles.margin, yPosition, 210 - styles.margin, yPosition);
-        yPosition += 8; // Espaço depois da linha aumentado
+        yPosition += 10; // Espaço depois da linha aumentado
       });
 
       // Rodapé
@@ -391,7 +390,7 @@
         for (let i = 1; i <= pageCount; i++) {
           doc.setPage(i);
           
-          const footerY = doc.internal.pageSize.getHeight() - 10;
+          const footerY = doc.internal.pageSize.getHeight() - 5;
           
           // Texto centralizado
           setTextStyle(doc, false);
