--- a/listagem.html
+++ b/listagem.html
@@ -343,8 +343,14 @@
         // Quebra de página se necessário
         if (yPosition + memberHeight > pageHeight - 15) {
           doc.addPage();
-          yPosition = 20;
+          yPosition = 30;
           totalPages++;
+        }
+
+        if (yPosition < pageHeight - 20) {
+          doc.setDrawColor(255, 255, 255); // linha branca para "apagar"
+          doc.setLineWidth(1);
+          doc.line(styles.margin, yPosition - 4, 210 - styles.margin, yPosition - 4);
         }
 
         // Adiciona campos formatados
@@ -381,10 +387,10 @@
         // Linha divisória com mais espaço
         doc.setDrawColor(230, 230, 230);
         doc.setLineWidth(0.3);
-        yPosition += 8; // Espaço antes da linha aumentado
+        yPosition += 4; // Reduzido
         doc.line(styles.margin, yPosition, 210 - styles.margin, yPosition);
-        yPosition += 8; // Espaço depois da linha aumentado
-      });
+        yPosition += 4; // Reduzido
+          });
 
       // Rodapé
       function addFooter(doc, totalPages) {
