--- a/listagem.html
+++ b/listagem.html
@@ -162,7 +162,7 @@
   // Exportar PDF
   document.getElementById("btnExportarPDF").addEventListener("click", () => {
   const doc = new window.jspdf.jsPDF();
-  const logoUrl = "https://via.placeholder.com/100x50.png?text=Logo"; // Substitua pela sua logo
+  const logoUrl = "./logo.png"; // Substitua pela sua logo
 
   const img = new Image();
   img.crossOrigin = "anonymous";
