--- a/listagem.html
+++ b/listagem.html
@@ -160,46 +160,57 @@
   });
 
   // Exportar PDF
-  document.getElementById("btnExportarPDF").addEventListener("click", () => {
-  const doc = new window.jspdf.jsPDF();
-  const logoUrl = "./logo.png"; // Substitua pela sua logo
+  document.getElementById("btnExportarPDF").addEventListener("click", async () => {
+    const doc = new window.jspdf.jsPDF();
 
-  const img = new Image();
-  img.crossOrigin = "anonymous";
-  img.src = logoUrl;
+    const logoUrl = "./logo.png"; // substitua pelo caminho real
+    const img = new Image();
+    img.crossOrigin = "anonymous";
+    img.src = logoUrl;
 
-  img.onload = () => {
-    doc.addImage(img, 'PNG', 10, 10, 40, 20);
-    doc.setFontSize(14);
-    doc.text("Igreja XXX", 10, 35);
-    doc.text("Lista completa de membros", 10, 45);
+    img.onload = function () {
+      doc.addImage(img, 'PNG', 10, 10, 40, 20);
+      doc.setFontSize(14);
+      doc.text("Igreja XXX", 10, 35);
+      doc.text("Lista completa de membros", 10, 45);
 
-    const cabecalhoY = 55;
+      const cabecalhoY = 55;
 
-    onValue(membrosRef, (snapshot) => {
-      const data = snapshot.val();
-      if (!data) return alert("Nenhum membro encontrado.");
+      // Firebase
+      import("./firebase-config.js").then(({ db }) => {
+        import("https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js").then(firebase => {
+          const { ref, get, child } = firebase;
 
-      const membrosArray = Object.values(data).map(m => ([
-        m.nome || "", m.nascimento || "", m.sexo || "", m.telefone || "",
-        m.funcao || "", m.batismo || "", m.endereco || "", m.bairro || "",
-        m.cidade || "", m.estado || ""
-      ]));
+          get(child(ref(db), "membros")).then(snapshot => {
+            if (!snapshot.exists()) {
+              alert("Nenhum membro encontrado.");
+              return;
+            }
 
-      window.jspdf.autoTable(doc, {
-        startY: cabecalhoY,
-        head: [[
-          "Nome", "Nascimento", "Sexo", "Telefone", "Função", 
-          "Batismo", "Endereço", "Bairro", "Cidade", "Estado"
-        ]],
-        body: membrosArray,
-        styles: { fontSize: 8, cellPadding: 2 }
+            const data = snapshot.val();
+            const membrosArray = Object.values(data).map(m => ([
+              m.nome || "", m.nascimento || "", m.sexo || "", m.telefone || "",
+              m.funcao || "", m.batismo || "", m.endereco || "", m.bairro || "",
+              m.cidade || "", m.estado || ""
+            ]));
+
+            // Aqui usamos jsPDF.autoTable diretamente
+            window.jspdfAutoTable(doc, {
+              startY: cabecalhoY,
+              head: [[
+                "Nome", "Nascimento", "Sexo", "Telefone", "Função", 
+                "Batismo", "Endereço", "Bairro", "Cidade", "Estado"
+              ]],
+              body: membrosArray,
+              styles: { fontSize: 8, cellPadding: 2 }
+            });
+
+            doc.save("lista_membros.pdf");
+          });
+        });
       });
-
-      doc.save("lista_membros.pdf");
-    }, { onlyOnce: true });
-  };
-});
+    };
+  });
 
 </script>
 
@@ -207,5 +218,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  // Registra corretamente autoTable global
+  window.jspdfAutoTable = window.jspdf?.jsPDF?.API?.autoTable;
+</script>
 </body>
 </html>
