--- a/listagem.html
+++ b/listagem.html
@@ -158,18 +158,17 @@
   document.getElementById("btnExportarPDF").addEventListener("click", () => {
     const doc = new window.jsPDFGlobal({ orientation: "landscape", unit: "mm", format: "a4" });
 
-    const logoUrl = "./logo.png"; // Caminho da sua logo
+    const logoUrl = "./logo.png";
     const img = new Image();
     img.crossOrigin = "anonymous";
     img.src = logoUrl;
 
     img.onload = function () {
       const pageWidth = doc.internal.pageSize.getWidth();
-      const logoWidth = 40; // Altere aqui se quiser um logo maior/menor
+      const logoWidth = 40;
       const logoHeight = (img.height / img.width) * logoWidth;
       const logoX = (pageWidth - logoWidth) / 2;
 
-      // Cabeçalho
       doc.addImage(img, 'PNG', logoX, 10, logoWidth, logoHeight);
       doc.setFontSize(14);
       doc.text("Igreja XXX", pageWidth / 2, 10 + logoHeight + 7, { align: "center" });
@@ -177,7 +176,6 @@
 
       const cabecalhoY = 10 + logoHeight + 25;
 
-      // Obter dados do Firebase
       import("./firebase-config.js").then(({ db }) => {
         import("https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js").then(firebase => {
           const { ref, get, child } = firebase;
@@ -186,18 +184,19 @@
             if (!snapshot.exists()) return alert("Nenhum membro encontrado.");
 
             const data = snapshot.val();
-            const membrosArray = Object.values(data).map(m => ([
-              m.nome || "", m.nascimento || "", m.sexo || "", m.telefone || "",
-              m.funcao || "", m.batismo || "", m.endereco || "", m.bairro || "",
-              m.cidade || "", m.estado || ""
-            ]));
+            const membrosArray = Object.values(data).map(m => {
+              const enderecoCompleto = `${m.endereco || ''}${m.numero ? ', ' + m.numero : ''}${m.bairro ? ', ' + m.bairro : ''},\n${m.cidade || ''}, ${m.estado || ''}`;
+              return [
+                m.nome || "", m.nascimento || "", m.sexo || "", m.telefone || "",
+                m.funcao || "", m.batismo || "", enderecoCompleto
+              ];
+            });
 
-            // Configurar autoTable
             doc.autoTable({
               startY: cabecalhoY,
               head: [[
                 "Nome", "Nascimento", "Sexo", "Telefone", "Função",
-                "Batismo", "Endereço", "Bairro", "Cidade", "Estado"
+                "Batismo", "Endereço completo"
               ]],
               body: membrosArray,
               styles: { fontSize: 8, cellPadding: 2 },
@@ -210,7 +209,6 @@
 
                 const currentPage = doc.internal.getCurrentPageInfo().pageNumber;
 
-                // Rodapé
                 doc.setFontSize(8);
                 doc.text(`Página ${currentPage} de ${pageCount}`, pageWidth / 2, pageHeight - 7, { align: "center" });
 
@@ -232,10 +230,7 @@
                 3: { cellWidth: 30 }, // Telefone
                 4: { cellWidth: 25 }, // Função
                 5: { cellWidth: 25 }, // Batismo
-                6: { cellWidth: 45 }, // Endereço
-                7: { cellWidth: 25 }, // Bairro
-                8: { cellWidth: 25 }, // Cidade
-                9: { cellWidth: 20 }  // Estado
+                6: { cellWidth: 80 }  // Endereço completo
               }
             });
 
@@ -246,6 +241,7 @@
     };
   });
 </script>
+
 
 
 <!-- 🔹 Bibliotecas externas -->
